--- a/frontend/views/sign_up.ejs
+++ b/frontend/views/sign_up.ejs
@@ -2,17 +2,9 @@
 <html lang="en">
 <head>
     <title><%= title %></title>
-
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <!-- Bootstrap 4.5 CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Style CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -24,10 +16,9 @@
 <div class="container">
     <h2><%= title %></h2>
     <form action="/save" method="post">
-
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="text" class="form-control" id="name" placeholder="name" name="name" required>
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name" required>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
@@ -37,7 +28,6 @@
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" required>
         </div>
-
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
