--- a/frontend/views/sign_up.ejs
+++ b/frontend/views/sign_up.ejs
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/frontend/assets/stylesheet.css">
+
+    <style>
+        body { background-color: #7cf7c0;}
+        .btn { background: #0E5A3E; }
+        .container{ background-color: #5cb85c;
+        }
+    </style>
+
 </head>
 <body>
-
+<br><br><br>
 <div class="container">
     <h2><%= title %></h2>
     <form action="/save" method="post">
@@ -28,7 +33,9 @@
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+        <a href="/login.html" class="btn btn-success" role="button" aria-pressed="true">Go Back</a>
+        <br><br>
     </form>
 </div>
 
